--- a/src/Plugins/SmartStore.MegaMenu/Views/MegaMenu/RotatorProducts.cshtml
+++ b/src/Plugins/SmartStore.MegaMenu/Views/MegaMenu/RotatorProducts.cshtml
@@ -6,13 +6,15 @@
         <div class="pl-row row">
             @foreach (var item in Model)
             {
-                <article class="item-box card card-block card-shadow equalized-column" data-equalized-deep="true">
+                <article class="item-box card card-block equalized-column" data-equalized-deep="true">
                     @Html.Partial("_ProductBoxCompact", item)
                 </article>
             }
         </div>
 
-        <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
-		<a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
+        <div class="btn-group" role="group">
+            <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
+            <a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
+        </div>       
     </div>
 }
